--- a/genealogy_mapper/requirements.txt
+++ b/genealogy_mapper/requirements.txt
@@ -3,6 +3,8 @@ requests>=2.31.0
 validators>=0.22.0
 python-dateutil>=2.8.2
 rich>=13.7.0
+beautifulsoup4>=4.12.3
+click>=8.1.7
 
 # Development dependencies
 pytest>=7.0.0
