feat: add configurable obituaries file location with --obituaries-file flag

--- a/genealogy_mapper/pytest.ini
+++ b/genealogy_mapper/pytest.ini
@@ -3,4 +3,6 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --cov=genealogy_mapper --cov-report=term-missing 
+addopts = -v --tb=short
+log_cli = true
+log_cli_level = INFO 
