--- a/genealogy_mapper/requirements.txt
+++ b/genealogy_mapper/requirements.txt
@@ -1,13 +1,16 @@
 # Core dependencies
-requests>=2.31.0
-validators>=0.22.0
+requests>=2.25.1
+validators>=0.20.0
 python-dateutil>=2.8.2
 rich>=13.7.0
-beautifulsoup4>=4.12.3
+beautifulsoup4>=4.9.3
 click>=8.1.7
+selenium>=4.1.0
+webdriver-manager>=3.5.2
 
 # Development dependencies
 pytest>=7.0.0
+pytest-selenium>=4.0.0
 black>=23.0.0
 flake8>=6.0.0
 mypy>=1.0.0 
