mid-de insert/update

--- a/genealogy_mapper/requirements.txt
+++ b/genealogy_mapper/requirements.txt
@@ -7,10 +7,15 @@ beautifulsoup4>=4.9.3
 click>=8.1.7
 selenium>=4.1.0
 webdriver-manager>=3.5.2
+neo4j>=5.17.0
+openai>=1.0.0
+PyYAML>=6.0.1
+python-dotenv>=1.0.0
 
 # Development dependencies
-pytest>=7.0.0
+pytest>=8.0.0
 pytest-selenium>=4.0.0
 black>=23.0.0
 flake8>=6.0.0
-mypy>=1.0.0 
+mypy>=1.0.0
+spacy>=3.7.0 
