--- a/genealogy_mapper/requirements.txt
+++ b/genealogy_mapper/requirements.txt
@@ -9,10 +9,12 @@ selenium>=4.1.0
 webdriver-manager>=3.5.2
 playwright>=1.42.0
 neo4j>=5.17.0
-openai>=1.0.0
+openai>=1.12.0
 PyYAML>=6.0.1
 python-dotenv>=1.0.0
 spacy>=3.7.0
+networkx>=3.2.0
+matplotlib>=3.8.0
 
 # Development dependencies
 pytest>=8.0.0
